--- a/src/components/IntroStep.module.css
+++ b/src/components/IntroStep.module.css
@@ -1,6 +1,7 @@
 .container {
   width: 100%;
-  min-height: 100dvh;
+  height: 100dvh;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   background-image: url('../assets/bg.jpg');
